# python-sonarqube

./: .coveragerc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
tests/: test_app.py
