[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = "A simple Flask example"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 88
ignore = "E203, W503"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-x --cov=app --cov-config=.coveragerc --cov-report=xml"
testpaths = [
  "tests"
]
